--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-  font-family: sans-serif;
-  background-color: #f4f4f4;
-  margin: 0;
-  padding: 0;
-}
+    font-family: sans-serif;
+    background-color: #f4f4f4;
+    padding: 20px;
+  }
+  
