--- a/src/components/principal.css
+++ b/src/components/principal.css
@@ -1,29 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-
-  .title-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
+  .title{
+    display:flex;
+    gap: 20px;
+    padding: 20px;
   }
 
   .pixel-art {
+    display: flex;
     font-family: 'Press Start 2P', cursive;
     font-weight: bold;
+    justify-content: center;
+    align-items: center;
     font-size: 2rem;
     text-transform: uppercase;
     color: #ffffff; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 10px;
     background: linear-gradient(145deg, #4a90e2, #1c3d74); 
     border: 4px solid #1c3d74; 
     border-radius: 10px; 
     width: 50px;
     height: 50px;
-    line-height: 1;
   }
   
   
